Fixes height calculation and horizontal scrolling (#48)
* Fix horizontal scrolling
* Fix vertical height calculation

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,7 @@
 @import "../assets/css/typography.css";
 
 body {
-  background: #ff8484;
+  background: #d7dce1;
   margin: 0;
 }
 
